Add more text to the message of the home paragraph

--- a/7/bank_page.html
+++ b/7/bank_page.html
@@ -56,7 +56,7 @@
           <div class="col-6">
             <p>
               Dile hola al futuro de los servicios financieros En Nu, estás en
-              el centro de todo, con $0 cuota de manejo, sin condiciones
+              el centro de todo, con $0 cuota de manejo, sin condiciones ni ataduras al sistema convensional de manejo de dinero
             </p>
           </div>
           <div class="col-6">
