Changes the padding of some elements and changes the columns between the text and te img

--- a/7/bank_page.html
+++ b/7/bank_page.html
@@ -51,15 +51,15 @@
     <!--main - home -->
     <main id="home">
       <div class="container">
-        <h2 class="display-3 text-center">THIS IS NU BANK</h2>
-        <div class="row">
-          <div class="col-6">
+        <h2 class="display-3 text-center py-4">THIS IS NU BANK</h2>
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
             <p>
               Dile hola al futuro de los servicios financieros En Nu, estás en
               el centro de todo, con $0 cuota de manejo, sin condiciones ni ataduras al sistema convensional de manejo de dinero
             </p>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <img src="./nubank.png" alt="Logo Nu" class="img-fluid" />
           </div>
         </div>
