cards in boostrap

--- a/7/cards.html
+++ b/7/cards.html
@@ -7,17 +7,24 @@
     <title>Cards</title>
 </head>
 <body>
-    <!--cards-->
-    <div class="container">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+
+    <main class="container">
+        <h1 class="py-3 text-center">Products to sale</h1>
+        <div class="row">
+            <div class="col-6">
+                <div class="card" style="width: 18rem;">
+                    <img src="./speakers.jpg" class="card-img-top" alt="Speakers JBL">
+                    <div class="card-body">
+                    <h5 class="card-title">JBL Speakers</h5>
+                    <p class="card-text">The cost of this product is $50.</p>
+                    <a href="#" class="btn btn-primary">Buy now!</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+    <!--cards-->
+
 
 
     <!--script-->
