--- a/7/functions_js.html
+++ b/7/functions_js.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-    <input type="number" id="number_1">
-    <input type="number" id="number_2">
+  </head>
+  <body>
+    <input type="number" id="number_1" oninput="updateValue()"/>
+    <input type="number" id="number_2" oninput="updateValue()"/>
 
-    <button id="addition">Addition +</button>
+    <button id="addition" onclick="addition()">Addition +</button>
+    <button id="substraction" onclick="substraction()">Substraction -</button>
+
+    <h1 id="result">Result:</h1>
 
     <!--script-->
     <script>
+      let number_1 = 0;
+      let number_2 = 0;
 
-        let number_1 = document.getElementById("number_1").value
-        let number_2 = document.getElementById("number_2").value
+      function updateValue() {
+        number_1 = parseInt(document.getElementById("number_1").value);
+        number_2 = parseInt(document.getElementById("number_2").value);
+      }
+
+      function addition() {
+        let result = number_1 + number_2;
+
+        console.log(number_1);
+        document.getElementById("result").textContent = "Result: " + result;
+      }
+
+      function substraction(){
+        let result = number_1 - number_2
         
-        function addition(fnumber_1, fnumber_2){
-
-        }
+        document.getElementById("result").textContent = "Result: " + result
+      }
     </script>
-
-</body>
+  </body>
 </html>
