Explain css selectos class, element

--- a/7/events/index.html
+++ b/7/events/index.html
@@ -10,9 +10,9 @@
     <h1 class="title">MAIN MENU</h1>
     <section class="menu">
         <a href="./sections/calculator/calculator.html" class="option">Calculator</a>
-        <a href="" class="option"></a>
-        <a href="" class="option"></a>
-        <a href="" class="option"></a>
+        <a href="" class="option">OPTION 2</a>
+        <a href="" class="option">OPTION 3</a>
+        <a href="" class="option">OPTION 4</a>
     </section>
     <!--script-->
     <script src="script.js"></script>
