Add id to the inputs
Add the id to different and call the input to js from HTML

--- a/7/events/sections/calculator/calculator.html
+++ b/7/events/sections/calculator/calculator.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <h1 class="title">A simple calculator</h1>
-        <input type="number" placeholder="Enter first number">
-        <input type="number" placeholder="Enter second number">
+        <input id="number1"  type="number" placeholder="Enter first number">
+        <input id="number2" type="number" placeholder="Enter second number">
         <select name="operations" id="operation">
             <option value="">Choice your procedure</option>
             <option value="add">Addition</option>
