Styling the calculator

--- a/7/events/sections/calculator/calculator.html
+++ b/7/events/sections/calculator/calculator.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../style.css" />
     <title>Calculator</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1 class="title">A simple calculator</h1>
-        <input id="number1"  type="number" placeholder="Enter first number">
-        <input id="number2" type="number" placeholder="Enter second number">
+      <h1 class="title">A simple calculator</h1>
+      <div class="row">
+        <input id="number1" type="number" placeholder="Enter first number" />
+        <input id="number2" type="number" placeholder="Enter second number" />
+      </div>
+      <div class="row">
         <select name="operations" id="operation">
-            <option value="">Choice your procedure</option>
-            <option value="add">Addition</option>
-            <option value="subs">Substraction</option>
-            <option value="multi">Multiplication</option>
-            <option value="div">Division</option>
+          <option value="">Choice your procedure</option>
+          <option value="add">Addition</option>
+          <option value="subs">Substraction</option>
+          <option value="multi">Multiplication</option>
+          <option value="div">Division</option>
         </select>
-        <h2 id="result">Result: </h2>
         <button id="calculate">Calculate the math procedure choose</button>
+      </div>
+
+      <h2 id="result">Result:</h2>
     </div>
 
     <!--script-->
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
