--- a/7/events/index.html
+++ b/7/events/index.html
@@ -10,7 +10,7 @@
     <h1 class="title">MAIN MENU</h1>
     <section class="menu">
         <a href="./sections/calculator/calculator.html" class="option">Calculator</a>
-        <a href="" class="option">OPTION 2</a>
+        <a href="./sections/validateAge/validateAge.html" class="option">Calculate Age</a>
         <a href="" class="option">OPTION 3</a>
         <a href="" class="option">OPTION 4</a>
     </section>
