--- a/7/events/sections/validateAge/validateAge.html
+++ b/7/events/sections/validateAge/validateAge.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../style.css" />
     <title>Validate the age</title>
-</head>
-<body>
-    <p class="titleText">This page will validate if a user is an adult or not; with the born date</p>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <p class="titleText">
+          This page will validate if a user is an adult or not; with the born
+          date
+        </p>
+      </div>
+      <div class="row">
+        <input type="number" id="bornYear" placeholder="Enter your born year" />
+      </div>
+      <div class="row">
+        <h1 id="result">Fill the input and press the button</h1>
 
-    <input type="number" id="bornYear" placeholder="Enter your born year"/>
+        <button id="calculateAge">Calculate your age</button>
+      </div>
 
-    <h1 id="result">Fill the input and press the button</h1>
-
-    <button id="calculateAge">Calculate your age</button>
-    <a href="../../index.html">Menu</a>
+      <a href="../../index.html">Menu</a>
+    </div>
 
     <!--script-->
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
