--- a/7/events/sections/bootstrapPage/index.html
+++ b/7/events/sections/bootstrapPage/index.html
@@ -15,7 +15,7 @@
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Universal Hotel</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -60,6 +60,22 @@
           <br>
           Universal Hotel – Stay Inspired.
         </p>
+      </div>
+    </section>
+
+    <!--services-->
+    <section id="services" class="text-center container">
+      <h2 class="display-3 my-5">Our services</h2>
+      <div class="row">
+        <div class="col-4">
+          <div class="card" style="width: 18rem;">
+            <img src="./img/room.jpg" class="card-img-top" alt="Hotel rooms">
+            <div class="card-body">
+              <h5 class="card-title">Room</h5>
+              <p class="card-text">Our rooms have the best distribution that a hotel could have.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!--scripts-->
